tests/ui/consts/nested_erroneous_ctfe.stderr
error[E0308]: mismatched types
  --> $DIR/nested_erroneous_ctfe.rs:2:16
   |
LL |     [9; || [9; []]];
   |                ^^ expected `usize`, found `[_; 0]`
   |
   = note: expected type `usize`
             found array `[_; 0]`

error[E0308]: mismatched types
  --> $DIR/nested_erroneous_ctfe.rs:2:9
   |
LL |     [9; || [9; []]];
   |         ^^^^^^^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `[closure@$DIR/nested_erroneous_ctfe.rs:2:9: 2:11]`
help: use parentheses to call this closure
   |
LL |     [9; (|| [9; []])()];
   |         +          +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
